--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
         <meta charset = "UTF-8">
         <title>Calculator</title>
         <script src = "script.js" defer></script>
+        <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
-        
+        <div class = "container">
+            <div class = "display">918</div>
+            <div class = "buttons">
+                <button class = "btn">1</button>
+                <button class = "btn">2</button>
+                <button class = "btn">3</button>
+                <button class = "btn plus oper">+</button>
+                <button class = "btn">4</button>
+                <button class = "btn">5</button>
+                <button class = "btn">6</button>
+                <button class = "btn minus oper">-</button>
+                <button class = "btn">7</button>
+                <button class = "btn">8</button>
+                <button class = "btn">9</button>
+                <button class = "btn multiply oper">*</button>
+                <button class = "btn clear oper">C</button>
+                <button class = "btn">0</button>
+                <button class = "btn equals oper">=</button>
+                <button class = "btn divide oper">/</button>
+            </div>
+        </div>
     </body>
 </html>
