Display numbers when buttons are clicked

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     </head>
     <body>
         <div class = "container">
-            <div class = "display">918</div>
+            <div class = "display"></div>
             <div class = "buttons">
-                <button class = "btn">1</button>
-                <button class = "btn">2</button>
-                <button class = "btn">3</button>
+                <button class = "btn num">1</button>
+                <button class = "btn num">2</button>
+                <button class = "btn num">3</button>
                 <button class = "btn plus oper">+</button>
-                <button class = "btn">4</button>
-                <button class = "btn">5</button>
-                <button class = "btn">6</button>
+                <button class = "btn num">4</button>
+                <button class = "btn num">5</button>
+                <button class = "btn num">6</button>
                 <button class = "btn minus oper">-</button>
-                <button class = "btn">7</button>
-                <button class = "btn">8</button>
-                <button class = "btn">9</button>
+                <button class = "btn num">7</button>
+                <button class = "btn num">8</button>
+                <button class = "btn num">9</button>
                 <button class = "btn multiply oper">*</button>
                 <button class = "btn clear oper">C</button>
-                <button class = "btn">0</button>
+                <button class = "btn num">0</button>
                 <button class = "btn equals oper">=</button>
                 <button class = "btn divide oper">/</button>
             </div>
