--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <button class = "btn num">8</button>
                 <button class = "btn num">9</button>
                 <button class = "btn multiply oper">*</button>
-                <button class = "btn clear oper">C</button>
+                <button class = "btn clear">C</button>
                 <button class = "btn num">0</button>
-                <button class = "btn equals oper">=</button>
+                <button class = "btn equals">=</button>
                 <button class = "btn divide oper">/</button>
             </div>
         </div>
